--- a/Zad1_8/Zad1_8.csproj
+++ b/Zad1_8/Zad1_8.csproj
@@ -11,4 +11,16 @@
     <PackageReference Include="Google.OrTools" Version="9.12.4544" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="input1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="input2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
